--- a/flexbox_example.html
+++ b/flexbox_example.html
@@ -9,14 +9,14 @@
 
 <link rel="stylesheet" href="style.css">
     <div class="container">
-        <div id="box1" class="boxes"></div>
-        <div id="box2" class="boxes"></div>
-        <div id="box3" class="boxes"></div>
-        <div id="box4" class="boxes"></div>
-        <div id="box5" class="boxes"></div>
-        <div id="box6" class="boxes"></div>
-        <div id="box7" class="boxes"></div>
-        <div id="box8" class="boxes"></div>
+        <div id="box1" class="boxes">1</div>
+        <div id="box2" class="boxes">2</div>
+        <div id="box3" class="boxes">3</div>
+        <div id="box4" class="boxes">4</div>
+        <div id="box5" class="boxes">5</div>
+        <div id="box6" class="boxes">6</div>
+        <div id="box7" class="boxes">7</div>
+        <div id="box8" class="boxes">8</div>
     </div>
     
 </body>
